fixed links margin on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 @import "~react-image-gallery/styles/css/image-gallery.css";
 
 * {
-
   font-family: 'Oranienbaum', serif;
   margin: 0;
   padding: 0;
@@ -37,7 +36,6 @@
   display: flex;
   height: 200px;
   width: 600px;
-
 }
 
 #intro-h1{
@@ -398,7 +396,6 @@
   font-size: 16px;
 }
 
-
 /* Contact Page */
 .container-contact-img{
   display: flex;
@@ -460,9 +457,7 @@
   text-align: center;
   /* margin-bottom: 30px; */
   margin-top: 6rem;
-
 }
-
 
 .sent-message p  {
   padding-bottom: 20px;
@@ -765,13 +760,10 @@
     margin-bottom: 10px;
   }
 
-  /* .container-a-tag{
-    font-size: 15px;
-  } */
   .links{
     font-size: 1rem;
-    padding-left: 3px;
-    padding-right: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
 
   /* Music */
